<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bgd"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/headerlg"
        android:layout_width="match_parent"
        android:layout_height="270dp">

        <TextView
            android:id="@+id/txtWell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellcome"
            android:textSize="35sp"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:textColor="#1C0606"
             />

        <TextView
            android:id="@+id/txtlogin1"
            android:layout_margin="30dp"
            android:layout_below="@+id/txtWell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="#1C0606"
            android:textSize="40sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bodylg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerlg">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            >
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="30dp"
                android:drawablePadding="12dp"
                android:padding="12dp"
                android:background="@drawable/layerlg"
                android:ems="12"
                android:hint="@string/txtuserlogin"
                android:textSize="28sp"
                android:drawableLeft="@drawable/ic_email"
                android:textColorHint="#4F94CD"
/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/layerlg"
                android:drawableLeft="@drawable/ic_password"
                android:drawableRight="@drawable/eye"
                android:drawablePadding="12dp"
                android:ems="12"
                android:hint="@string/txtpwlogin"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="28sp"
                android:textColorHint="#4F94CD"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodylg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbremember"
                android:textSize="23sp"
                android:layout_marginLeft="5dp"
                android:textColor="#1167AA"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:text="@string/recoverpw"
                android:textSize="20sp"
                android:textColor="#1167AA"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#005096"
                android:ems="12"
                android:padding="12dp"
                android:text="@string/btnlogin"
                android:textSize="27sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testview"
                android:textSize="25dp"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#254981"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
