<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B8970"
    tools:context=".MainActivity">

    <!--    head -->
    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00868B">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="200dp">

            <ImageView
                android:layout_width="109dp"
                android:layout_height="126dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/anhthe" />
        </androidx.cardview.widget.CardView>
        <!-- Name    -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="@string/my_name"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <!--Second -->
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/head"
        android:background="@drawable/secondlayer">
        <!--        Bài viết   -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/posts"
                    android:textColor="#FAF0E6"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/content"
                    android:textAllCaps="true"
                    android:textColor="#FAF0E6"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <!--        theo dõi   -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/follow"
                    android:textColor="#FAF0E6"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/follow1"
                    android:textAllCaps="true"
                    android:textColor="#FAF0E6"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <!--        bạn bè         -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/friend"
                    android:textColor="#FAF0E6"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:text="@string/friend1"
                    android:textAllCaps="true"
                    android:textColor="#FAF0E6"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <!--     Thông tin cá nhân-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/body"
        android:layout_marginTop="60dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4">
            <!--          Email   -->
            <TextView
                android:id="@+id/email"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/thirdlayeremail"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:padding="13dp"
                android:text="@string/email"
                android:textColor="#4F94CD"
                android:textSize="25sp" />
            <!--           Địa chỉ   -->
            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/thirdlayeraddress"
                android:drawableLeft="@drawable/ic_address"
                android:drawablePadding="10dp"
                android:padding="13dp"
                android:text="@string/address"
                android:textColor="#4F94CD"
                android:textSize="25sp" />

            <!--            Số điện thoại     -->
            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/thirdlayerphone"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:padding="13dp"
                android:text="@string/phone"
                android:textColor="#4F94CD"
                android:textSize="25sp" />
            <!--            Github-->
            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/thirdlayergithub"
                android:drawableLeft="@drawable/ic_github"
                android:drawablePadding="10dp"
                android:padding="13dp"
                android:text="@string/github"
                android:textColor="#4F94CD"
                android:textSize="25sp" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>