<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bgd"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/headersingup"
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <TextView
            android:id="@+id/txtWell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:text="@string/txtAcc"
            android:textSize="35sp"
            android:textAllCaps="true"
            android:textColor="#1C0606"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bodylg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headersingup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:paddingLeft="6dp"
            >
<!--            First Name-->
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFirstName"
                android:textSize="25sp"
                android:layout_marginBottom="14dp"/>
<!--input first name-->
            <EditText
                android:layout_width="374dp"
                android:layout_height="40dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/layersingupboder"
                android:ems="10"
                android:textSize="25sp" />
<!--            last name  -->
            <TextView
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:text="@string/txtLastName"
                android:textSize="25sp"/>
<!--            input last name -->
            <EditText
                android:layout_width="374dp"
                android:layout_height="40dp"
                android:ems="10"
                android:textSize="25sp"
                android:background="@drawable/layersingupboder"
                android:layout_marginBottom="14dp"
                />
<!--            Email-->
            <TextView
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:text="@string/txtEmailSU"
                android:textSize="25sp"
                android:layout_marginBottom="14dp"
                />
<!--            input email -->
            <EditText
                android:layout_width="374dp"
                android:layout_height="40dp"
                android:ems="10"
                android:textSize="25sp"
                android:background="@drawable/layersingupboder"
                android:layout_marginBottom="14dp"
                />
<!--            password -->
            <TextView
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:text="@string/txtPassW"
                android:textSize="25sp"
                android:layout_marginBottom="14dp"
                />
<!--            input pass-->
            <EditText
                android:layout_width="374dp"
                android:layout_height="40dp"
                android:ems="10"
                android:textSize="25sp"
                android:background="@drawable/layersingupboder"
                android:inputType="textPassword"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodylg">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#005096"
                android:ems="12"
                android:padding="12dp"
                android:text="@string/txtSingup"
                android:textSize="27sp" />
    </RelativeLayout>
</RelativeLayout>
